0.6.10/_sources/gettingstarted/examples/gallery/auto_examples_analysis/index.rst
:orphan:

.. _examples-core-index:

##################
Analysis NDDataset
##################



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    </div>


Decomposition
-------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the Evolving Factor Analysis">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_efa_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EFA example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the Evolving Factor Analysis of a TEST dataset (ref. Keller and Mas...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_efa_keller_massart_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa_keller_massart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EFA (Keller and Massart original example)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="FastICA example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_fast_ica_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FastICA example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the 2D IRIS analysis of CO adsorption on a sulfide catalyst.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_iris_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_iris.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">2D-IRIS analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the MCR ALS optimization of a dataset corresponding to a HPLC-DAD r...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_mcrals_chrom1_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_chrom1.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MCR-ALS example (adapted from Jaumot et al. 2005)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the MCR ALS optimization of the UV-vis of spectra resulting from a ...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_mcrals_kinetics_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_kinetics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MCR-ALS with kinetic constraints</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="NMF analysis example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_nmf_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_nmf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NMF analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PCA example (iris dataset)">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_pca_iris_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_iris.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PCA example (iris dataset)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PCA analysis example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_pca_spec_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_spec.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PCA analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SIMPLISMA example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_simplisma_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_simplisma.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SIMPLISMA example</div>
    </div>


.. raw:: html

    </div>


Cross-decomposition
-------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PLS regression example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/images/thumb/sphx_glr_plot_pls_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_b_crossdecomposition_plot_pls.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PLS regression example</div>
    </div>


.. raw:: html

    </div>


Curvefitting
------------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fitting 1D dataset">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/c_curvefitting/images/thumb/sphx_glr_plot_fit_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_c_curvefitting_plot_fit.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fitting 1D dataset</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we find the least  square solution of a simple linear equation.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/c_curvefitting/images/thumb/sphx_glr_plot_lstsq_single_equation_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_c_curvefitting_plot_lstsq_single_equation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Solve a linear equation using LSTSQ</div>
    </div>


.. raw:: html

    </div>


Baseline
--------



.. raw:: html

    <div class="sphx-glr-thumbnails">


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform a baseline correction of a 2D NDDataset interactively, using the mu...">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/d_baseline/images/thumb/sphx_glr_plot_baseline_correction_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_d_baseline_plot_baseline_correction.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NDDataset baseline correction</div>
    </div>


.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/index.rst
   /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/index.rst
   /gettingstarted/examples/gallery/auto_examples_analysis/c_curvefitting/index.rst
   /gettingstarted/examples/gallery/auto_examples_analysis/d_baseline/index.rst



.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
