0.12.7/_sources/gettingstarted/examples/gallery/auto_examples_analysis/index.rst
:orphan:

.. _examples-analysis-index:

##################
Analysis NDDataset
##################



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. thumbnail-parent-div-close

.. raw:: html

    </div>


Decomposition
-------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the Evolving Factor Analysis">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_efa_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EFA example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the Evolving Factor Analysis of a TEST dataset (ref. Keller and Massart, Chemometrics and Intelligent Laboratory Systems, 12 (1992) 209-224 )">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_efa_keller_massart_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_efa_keller_massart.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">EFA (Keller and Massart original example)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="FastICA example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_fast_ica_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_fast_ica.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">FastICA example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example introduces 2D-IRIS analysis of CO adsorption on a sulfide catalyst with the optional spectrochempy-iris plugin.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_iris_intro_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_iris_intro.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">IRIS: 2D-IRIS analysis (plugin)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform the MCR ALS optimization of a dataset corresponding to a HPLC-DAD run, from :citejaumot:2005 and :citejaumot:2015.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_mcrals_chrom1_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_chrom1.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MCR-ALS example (adapted from Jaumot et al. 2005)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we perform MCR-ALS optimization on UV-Vis spectra from a three-component reaction A -&gt; B -&gt; C investigated by UV-Vis spectroscopy. Full details on the reaction and data acquisition conditions can be found in :citebijlsma:2001.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_mcrals_kinetics_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_mcrals_kinetics.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">MCR-ALS with kinetic constraints</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="NMF analysis example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_nmf_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_nmf.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">NMF analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PCA example (iris dataset)">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_pca_iris_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_iris.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PCA example (iris dataset)</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PCA analysis example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_pca_spec_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_pca_spec.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PCA analysis example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="SIMPLISMA example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_simplisma_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_simplisma.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">SIMPLISMA example</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows two convenient ways to build simple synthetic profiles directly with the SpectroChemPy API:">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/images/thumb/sphx_glr_plot_synthetic_profiles_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_a_decomposition_plot_synthetic_profiles.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Build synthetic concentration profiles</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Cross-decomposition
-------------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="PLS regression example">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/images/thumb/sphx_glr_plot_pls_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_b_crossdecomposition_plot_pls.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">PLS regression example</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Curvefitting
------------



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="Fitting 1D dataset">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/c_curvefitting/images/thumb/sphx_glr_plot_fit_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_c_curvefitting_plot_fit.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Fitting 1D dataset</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows the direct top-level helpers for generating common 1D profiles without instantiating fitting models explicitly.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/c_curvefitting/images/thumb/sphx_glr_plot_lineshapes_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_c_curvefitting_plot_lineshapes.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Built-in line-shape helpers</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="In this example, we find the least  square solution of a simple linear equation.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/c_curvefitting/images/thumb/sphx_glr_plot_lstsq_single_equation_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_c_curvefitting_plot_lstsq_single_equation.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Solve a linear equation using LSTSQ</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


Peak analysis
-------------

This section contains examples for peak detection and peak integration workflows.



.. raw:: html

    <div class="sphx-glr-thumbnails">

.. thumbnail-parent-div-open

.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows a compact workflow to locate peak maxima on an IR dataset and visualize the detected positions on top of the last spectrum.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/thumb/sphx_glr_plot_peak_finding_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_finding.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Find peak maxima in an IR time series</div>
    </div>


.. raw:: html

    <div class="sphx-glr-thumbcontainer" tooltip="This example shows how to baseline-correct a spectral region and compare trapezoidal and Simpson integration on a sequence of IR spectra.">

.. only:: html

  .. image:: /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/images/thumb/sphx_glr_plot_peak_integration_thumb.png
    :alt:

  :ref:`sphx_glr_gettingstarted_examples_gallery_auto_examples_analysis_d_peak_analysis_plot_peak_integration.py`

.. raw:: html

      <div class="sphx-glr-thumbnail-title">Integrate a baseline-corrected IR band</div>
    </div>


.. thumbnail-parent-div-close

.. raw:: html

    </div>


.. toctree::
   :hidden:
   :includehidden:


   /gettingstarted/examples/gallery/auto_examples_analysis/a_decomposition/index.rst
   /gettingstarted/examples/gallery/auto_examples_analysis/b_crossdecomposition/index.rst
   /gettingstarted/examples/gallery/auto_examples_analysis/c_curvefitting/index.rst
   /gettingstarted/examples/gallery/auto_examples_analysis/d_peak_analysis/index.rst

